# lidarino

./: '  .gitignore  Cargo.toml  Cross.toml  README.md  build_docs.sh  compile_and_send.sh  cross_installation_guide.md  debug_do.sh  do.sh  test_lidar.sh  test_mpu.sh  todo.md  what_we_did.md  wiki.md
.cargo/: config
datascience/: client.html  lidar_test.py  lidar_test_scan.py  mpc_find_combination.py  result_lowlat_points.json
misc/: 10k_shit_points.json  3k_wall.json  combined_floor_1000_feb20.json  feb20_1000.json  feb20_500.json  floor_300_feb20.json  generate_points.py  half_result_feb20.json  idk_what_points.json  index.html  json_gyro_output.py  lidar_test_scan.py  magnetometer_dump  main.py  pillow_down_1000.json  pillows_1000.json  plot_2d_stdin.py  plot_json.py  plot_stdin.py  random100points.json  result_points.json  show_3d_pos.py  smoll_test_19.json  socket_test.py  sphere_gen.py  test_evenly_points.py  test_send.py  vertical_2000.json
misc/mpu_readings/: dlpf_0  dlpf_1khz  unique_samples.py
src/: config.rs  distance.rs  distance_mock.rs  lib.rs  main.rs  mcp23s17.rs  motor.rs  mpu.rs  scan.rs  shared.rs  sphere.rs  test_mpu.rs  utils.rs
src/hardware/: atomic_quaternion.rs  distance.rs  hardcoded_hardware.rs  mcp23s17.rs  mcp23s17_mock.rs  mod.rs  motor.rs  mpu.rs
