[package]
name = "lidarino"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.0"
i2cdev = "0.5.1"
linux-embedded-hal = { version = "0.3" } # onli i2c feature
tokio = { version = "1", features = ["full"] }
warp = "0.3"
mio-serial = "5.0.4"
mpu9250 = { version = "0.24.1", features = ["i2c"] }
ahrs = "0.6.0"
nalgebra = "0.31.4" # Using the version that ahrs requires
rplidar_drv = "0.6.0"
# serialport = "4.2.0"
# opencv = { version = "0.74", default-features = false, features = ["imgproc", "highgui"]}

[[bin]]
name = "test_mpu"
path = "src/test_mpu.rs"

[[bin]]
name = "lidar_test"
path = "src/lidar_test.rs"
