[package]
name = "lidarino"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.0"
i2cdev = "0.5.1"
linux-embedded-hal = { version = "0.3" } # onli i2c feature
tokio = { version = "1", features = ["full"] }
warp = "0.3"
mio-serial = "5.0.4"
mpu9250 = { version = "0.24.1", features = ["i2c"] }
ahrs = "0.6.0"
nalgebra = "0.31.4" # Using the version that ahrs requires
rplidar_drv = "0.6.0"
rpos_drv = "0.2.0"
lazy_static = "1.4.0"
serde_json = "1.0.91"
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
rppal-mcp23s17 = "0.0.3"
tsp-rs = "0.1.0"
spinners = "4.1.0"
anyhow = "1.0.69"
toml = "0.7.2"
# opencv = { version = "0.74", default-features = false, features = ["imgproc", "highgui"]}

[features]
# default = ["mock_hardware"]
mock_hardware = []
